# asteroid

./: .gitignore  .readthedocs.yaml  .replit  .script  Asteroid - The Language.ipynb  Asteroid Unit Tests.ipynb  Asteroid User Guide.ipynb  Asteroid User Guide.md  Asteroid in Action.md  Asteroid the Language.ipynb  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Installing and Running.ipynb  Installing and Running.md  LICENSE  README.md  Reference Guide (Endnotes)  Reference Guide.md  Unit Tests.ipynb  Using Asteroid.md  _config.yml  asteroid  asteroid.vim  asteroid_frontend.py  asteroid_gram.py  asteroid_interp.py  asteroid_interp_walk.py  asteroid_lex.py  asteroid_parser.py  asteroid_state.py  asteroid_support.py  asteroid_symtab.py  asteroid_version.py  asteroid_walk.py  grammar.txt  index.md  io.ast  problem programs.ipynb  pyproject.toml  (+8 more)
_includes/: head-custom.html
_layouts/: default.html
asteroid/: __init__.py  asteroid  asteroid_frontend.py  asteroid_globals.py  asteroid_interp.py  asteroid_lex.py  asteroid_state.py  asteroid_support.py  asteroid_version.py  asteroid_walk.py  frontend.py  globals.py  grammar.txt  interp.py  lex.py  mad.py  repl.py  state.py  support.py  symtab.py  version.py  walk.py
avm/: avm.py
code/: Using Asteroid.ipynb  asteroid  asteroid.bat  asteroid_frontend.py  asteroid_globals.py  asteroid_interp.py  asteroid_lex.py  asteroid_state.py  asteroid_support.py  asteroid_support_prototype.py  asteroid_symtab.py  asteroid_version.py  asteroid_walk.py  grammar.txt  pstats  redundant-pattern-detection-tests.ipynb  redundant-pattern-detection-tests.py  regression-tests.ipynb  regression-tests.py  using-asteroid.ipynb  using-asteroid.md  using-asteroid.py
compiler/: ac.py  binarytrees.ast  compile.py  compile.sh  frontend.py  gen.py  match.ast  nbody.ast  prologue.ast  prologue_rust.ast  prologue_rust2.ast  toosimple.ast  toosimple.txt
compiler/avm/: Cargo.toml
compiler/avm/src/: lib.rs
compiler/support/: Cargo.toml
compiler/support/src/: lib.rs
compiler/toosimple/: Cargo.toml
compiler/toosimple/src/: main.rs
docs/: ADB.rst  ADB.txt  Asteroid User Guide.md  MAD.rst  (+22 more)
(+913 files in other folders)
