[package]
name = "avm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state = { path = "C:/Users/Timothy/Desktop/avm/state" }
symtab = { path = "C:/Users/Timothy/Desktop/avm/symtab" }
ast = { path = "C:/Users/Timothy/Desktop/avm/ast" }
support = { path = "C:/Users/Timothy/Desktop/avm/support" }
regex = "1"
