[package]
name = "avm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state = { path = "../state" }
symtab = { path = "../symtab" }
ast = { path = "../ast" }
support = { path = "../support" }
regex = "1"
shared_arena = { path = "../arena" }
