[package]
name = "support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state = { path = "C:/Users/Timothy/Desktop/avmb/state" }
symtab = { path = "C:/Users/Timothy/Desktop/avmb/symtab" }
ast = { path = "C:/Users/Timothy/Desktop/avmb/ast" }